--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -22,6 +22,10 @@ h1{
 
 /* General styles for the navbar */
 /* Base styles for navbar */
+.main-container{
+  padding-top: 60px !important;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -29,6 +33,10 @@ h1{
   padding: 1rem;
   background-color: #333;
   color: white;
+  position: fixed;
+  width: 100%;
+  height: 60px;
+  z-index: 10;
 }
 
 .nav-links {
@@ -71,7 +79,7 @@ h1{
     gap: 1rem;
     background-color: #333;
     position: absolute;
-    top: 70px;
+    top: 60px;
     left: 0;
     right: 0;
     padding: 1rem;
